[metadata]
name = xpose-generator
author = Paul Ollivier
author-email = contact@paulollivier.fr
summary = this packages creates a website based on the IR presentaitons at ESIPE
license = MIT
description-file = README.md
requires-python = >= 2.6

[files]
packages = xpose_gen

[entry_points]
console_scripts = 
    xposegen = xpose_gen:main
