[metadata]
name = xpose-generator
author = Paul Ollivier
author-email = contact@paulollivier.fr
summary = this packages creates a website based on the IR presentations at ESIPE
home-page = https://github.com/paulollivier/xpose-generator
license = MIT
description-file = README.md
requires-python = >= 2.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7


[files]
packages = xpose_gen

[entry_points]
console_scripts = 
    xposegen = xpose_gen:main
